# career_ios_backend

./: .env.example  .env.production.example  .firebaserc  .gitignore  .pre-commit-config.yaml  ADMIN_FIX_SUMMARY.md  ADMIN_LOGIN_IMPLEMENTATION.md  ADMIN_PORTAL_TEST_REPORT.md  ADMIN_UI_REDESIGN.md  ADMIN_UI_VISUAL_GUIDE.md  AI_VALIDATION_IMPROVEMENTS.md  ANNOTATED_SAFETY_WINDOW_IMPLEMENTATION.md  API_CLIENT_CASE_MANAGEMENT.md  BACKEND_FUNCTIONALITY.md  BIGQUERY_JSON_FIX.md  BILLING_QUICK_START.md  BILLING_SETUP_STATUS.md  CACHE_STRATEGY_ANALYSIS.md  CAREER_APP_SETUP.md  CHANGELOG.md  CHANGELOG_zh-TW.md  CLAUDE.md  CODEER_RAG_VERIFICATION_SUMMARY.md  CODE_REVIEW.md  CONSOLE_API_TEST_REPORT.md  COST_ANALYSIS.md  CREDIT_ADMIN_GUIDE.md  DASHBOARD_FIX_COMPARISON.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_TIME_FILTER_FIXES.md  DASHBOARD_UPGRADE_CHECKLIST.md  DATABASE_MIGRATION.md  DAU_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  FEATURE_AUDIT.md  FIELD_SCHEMAS_README.md  GEMINI_MIGRATION_PLAN.md  GEMINI_MIGRATION_SUMMARY.md  GITHUB_DEPLOY.md  (+74 more)
.claude/: MODEL_STRATEGY.md  OPTIMIZATION.md  QUICK_START.md  README.md  SKILL_AUTO_ACTIVATION.md  settings.json
alembic/: env.py
app/: __init__.py  database.py  main.py
docs/: API_CHANGES_report_quality.md  API_CLIENT_CASE_MANAGEMENT.md  API_REPORT_EDIT.md  BACKEND_DELIVERY.md  BILLING_MONITOR_README.md  COLD_START_ANALYSIS.md  DASHBOARD_BEFORE_AFTER.md  DASHBOARD_BEFORE_AFTER_COMPARISON.md  DASHBOARD_USER_SEGMENTATION_IMPROVEMENTS.md  DASHBOARD_V2_SUMMARY.md  DIFY_SUPABASE_SETUP.md  EXPERIMENT_RESULTS_2025-12-11.md  EXPERIMENT_RESULTS_RAG_VERIFIED_2025-12-11.md  EXPERT_AVATAR_EVALUATION_FRAMEWORK.md  FLOWISE_SUPABASE_SETUP.md  HOW_TO_ADD_NEW_TENANT.md  INCREMENTAL_BILLING_SUMMARY.md  INTERNAL_PORTAL_SETUP.md  KOTAEMON_SUPABASE_SETUP.md  LLM_PROVIDER_COMPLETE_GUIDE.md  LOGIN_ERROR_MESSAGES.md  MARKDOWN_UPDATE_FLOW.md  PARENTING_THEORIES.md  PRD_ELEVENLABS_SCRIBE_RAG.md  QA-test-report-2026-01-01.md  QA-test-transcripts.md  RAGFLOW_SUPABASE_SETUP.md  RAG_MULTI_AGENT_ARCHITECTURE.md  RAG_TUTORIAL_FOR_NON_TECHNICAL.md  REFACTORING_PLAN.md  dashboard-redesign-implementation-guide.md  dashboard-redesign-product-strategy.md  dashboard-upgrade-2025-02-07.md  encouragement_api_integration.md  encouragement_services_report.md  iOS_API_SIMPLE.md  refactor_realtime_html.md  報告生成改善_施工計畫.md
firebase-hosting/: index.html
scripts/: CLIENT_REPORT_zh-TW.md  EXPERIMENT_DELIVERABLES.md  EXPERIMENT_README.md  EXPERIMENT_WORKFLOW.md  PROMPT_COMPARISON.md  QUICKSTART.md  README_8_SCHOOLS_PROMPT.md  README_MIGRATION.md  backfill_report_markdown.py  batch_eval_strategies.py  benchmark_llm_providers.py  check_account.py  check_rls.sh  check_staging_constraints.py  check_test_account.py  cleanup_caches.py  compare_cache_strategies.py  compare_four_providers.py  counselors_example.csv  create_test_account.py  demo_quality_comparison.py  explicit_cache_results.json  fix_alembic_version.py  fix_emotion_model_names.py  import_counselors.py  inspect_bigquery_schema.py  list_codeer_agents.py  manage_db.py  migrate_to_subscription.py  recalculate_scores.py  reprocess_all_docs.py  seed_db.py  seed_test_users.py  start.sh  test_10min_realtime_simulation.py  test_3min_realtime.py  test_8_schools_prompt.py  test_8_schools_prompt_results.json  test_all_codeer_models.py  test_cache_cumulative.py  (+28 more)
static/: index.html  (+2 more)
(+556 files in other folders)
