[tool.poetry]
name = "career-counseling-backend"
version = "0.1.0"
description = "Backend API for Career Counseling iOS App"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.28.0"
redis = "^5.0.1"
celery = "^5.3.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
faker = "^20.1.0"
email-validator = "^2.1.0"
# RAG dependencies
openai = "^1.3.0"
pypdf2 = "^3.0.1"
pgvector = "^0.2.3"
supabase = "^2.20.0"
asyncpg = "^0.29.0"
jinja2 = "^3.1.6"
ragas = "^0.3.6"
mlflow = "^3.4.0"
google-cloud-aiplatform = "^1.120.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"